// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputGroup /> create input group items 1`] = `
<div
  className="fd-input-group fd-input-group--before"
>
  <span
    className="fd-input-group__addon fd-input-group__addon--before"
  >
    $
  </span>
  <input
    className=""
    onChange={[Function]}
    type="text"
    value="1234567890"
  />
</div>
`;

exports[`<InputGroup /> create input group items 2`] = `
<div
  className="fd-input-group fd-input-group--after"
>
  <input
    className=""
    onChange={[Function]}
    type="text"
    value="1234567890"
  />
  <span
    className="fd-input-group__addon fd-input-group__addon--after"
  >
    €
  </span>
</div>
`;

exports[`<InputGroup /> create input group items 3`] = `
<div
  className="fd-input-group fd-input-group--before fd-input-group--compact"
>
  <span
    className="fd-input-group__addon fd-input-group__addon--before"
  >
    $
  </span>
  <input
    className="fd-input fd-input--compact"
    onChange={[Function]}
    type="text"
    value="1234567890"
  />
</div>
`;

exports[`<InputGroup /> create input group items 4`] = `
<div
  className="fd-input-group fd-input-group--after fd-input-group--compact"
>
  <input
    className="fd-input fd-input--compact"
    onChange={[Function]}
    type="text"
    value="1234567890"
  />
  <span
    className="fd-input-group__addon fd-input-group__addon--after"
  >
    €
  </span>
</div>
`;

exports[`<InputGroup /> create input group items 5`] = `
<div
  className="fd-input-group fd-input-group--after"
>
  <input
    className=""
    onChange={[Function]}
    type="number"
    value={100}
  />
  <span
    className="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--after"
  >
    <button
      aria-label="Step up"
      className="fd-input-group__button fd-input-group__button--step-up sap-icon--slim-arrow-up"
      onClick={[Function]}
    />
    <button
      aria-label="Step down"
      className="fd-input-group__button fd-input-group__button--step-down sap-icon--slim-arrow-down"
      onClick={[Function]}
    />
  </span>
</div>
`;

exports[`<InputGroup /> create input group items 6`] = `
<div
  className="fd-input-group fd-input-group--after fd-input-group--compact"
>
  <input
    className="fd-input fd-input--compact"
    onChange={[Function]}
    type="number"
    value={100}
  />
  <span
    className="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--after"
  >
    <button
      aria-label="Step up"
      className="fd-input-group__button fd-input-group__button--step-up sap-icon--slim-arrow-up"
      onClick={[Function]}
    />
    <button
      aria-label="Step down"
      className="fd-input-group__button fd-input-group__button--step-down sap-icon--slim-arrow-down"
      onClick={[Function]}
    />
  </span>
</div>
`;

exports[`<InputGroup /> create input group items 7`] = `
<div
  className="fd-input-group"
>
  <input
    className=""
    onChange={[Function]}
    placeholder="Search Term"
    type="search"
    value=""
  />
  <span
    className="fd-input-group__addon fd-input-group__addon--button"
  >
    <button
      aria-label="Clear"
      className="fd-input-group__button fd-input-group__button--clear"
      onClick={[Function]}
    />
  </span>
</div>
`;

exports[`<InputGroup /> create input group items 8`] = `
<div
  className="fd-input-group fd-input-group--compact"
>
  <input
    className="fd-input fd-input--compact"
    onChange={[Function]}
    placeholder="Search Term"
    type="search"
    value="search me"
  />
  <span
    className="fd-input-group__addon fd-input-group__addon--button"
  >
    <button
      aria-label="Clear"
      className="fd-input-group__button fd-input-group__button--clear"
      onClick={[Function]}
    />
  </span>
</div>
`;

exports[`<InputGroup /> create input group items 9`] = `
<div
  className="fd-input-group fd-input-group--before"
>
  <span
    className="fd-input-group__addon fd-input-group__addon--before"
  >
    <span
      className="sap-icon--globe"
      role="presentation"
    />
  </span>
  <input
    className=""
    onChange={[Function]}
    type="text"
    value="1234567890"
  />
</div>
`;

exports[`<InputGroup /> create input group items 10`] = `
<div
  className="fd-input-group fd-input-group--before fd-input-group--compact"
>
  <span
    className="fd-input-group__addon fd-input-group__addon--before"
  >
    <span
      className="sap-icon--globe"
      role="presentation"
    />
  </span>
  <input
    className="fd-input fd-input--compact"
    onChange={[Function]}
    type="text"
    value="1234567890"
  />
</div>
`;

exports[`<InputGroup /> create input group items 11`] = `
<div
  className="fd-input-group fd-input-group--after"
>
  <input
    className=""
    onChange={[Function]}
    type="text"
    value="1234567890"
  />
  <span
    className="fd-input-group__addon fd-input-group__addon--after"
  >
    <span
      className="sap-icon--hide"
      role="presentation"
    />
  </span>
</div>
`;

exports[`<InputGroup /> create input group items 12`] = `
<div
  className="fd-input-group fd-input-group--after fd-input-group--compact"
>
  <input
    className="fd-input fd-input--compact"
    onChange={[Function]}
    type="text"
    value="1234567890"
  />
  <span
    className="fd-input-group__addon fd-input-group__addon--after"
  >
    <span
      className="sap-icon--hide"
      role="presentation"
    />
  </span>
</div>
`;

exports[`<InputGroup /> create input group items 13`] = `
<div
  className="fd-input-group fd-input-group--after"
>
  <input
    className=""
    onChange={[Function]}
    type="text"
    value="1234567890"
  />
  <span
    className="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--after"
  >
    <button
      className="fd-button--light"
      disabled={false}
      selected={false}
    >
      Button
    </button>
  </span>
</div>
`;

exports[`<InputGroup /> create input group items 14`] = `
<div
  className="fd-input-group fd-input-group--after fd-input-group--compact"
>
  <input
    className="fd-input fd-input--compact"
    onChange={[Function]}
    type="text"
    value="1234567890"
  />
  <span
    className="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--after"
  >
    <button
      className="fd-button--light"
      disabled={false}
      selected={false}
    >
      Button
    </button>
  </span>
</div>
`;

exports[`<InputGroup /> create input group items 15`] = `
<div
  className="fd-input-group fd-input-group--before"
>
  <span
    className="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--before"
  />
  <input
    className=""
    onChange={[Function]}
    type="text"
    value="1234567890"
  />
</div>
`;

exports[`<InputGroup /> create input group items 16`] = `
<div
  className="fd-form__group"
>
  <div
    className="fd-input-group fd-input-group--after"
  >
    <input
      className=""
      onChange={[Function]}
      type="text"
      value="1234567890"
    />
    <span
      className="fd-input-group__addon fd-input-group__addon--after"
    >
      €
    </span>
  </div>
</div>
`;

exports[`<InputGroup /> create input group items 17`] = `"<InputGroup />"`;
